--- a/css/styles.css
+++ b/css/styles.css
@@ -1,99 +1,96 @@
-*{
-    user-select: none
+* {
+  user-select: none;
 }
 
-
-
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #231f20;
-    color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #231f20;
+  color: white;
 }
 
 #board {
-    width: 500px;
-    height: 500px;
-    margin: 0 auto;
-    background-color: #231f20;
-    color: #c55967;
-    border: 6px solid #c55967;
-    border-radius: 10px;
-    display: grid;
-    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  background-color: #231f20;
+  color: #c55967;
+  border: 6px solid #c55967;
+  border-radius: 10px;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
 
 .box {
-    border: 6px solid #c55967;
-    font-family: Helvetica;
-    font-weight: bold;
-    font-size: 4em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  border: 6px solid #c55967;
+  font-family: Helvetica;
+  font-weight: bold;
+  font-size: 4em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .row {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .button {
-    background-color: #c55967;
-    border: none;
-    border-radius: 6px;
-    color: #231f20;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    cursor: pointer;
-    width: 200px;
-    
+  background-color: #c55967;
+  border: none;
+  border-radius: 6px;
+  color: #231f20;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  cursor: pointer;
+  width: 200px;
 }
 
-.button:active, .button:focus {
-    outline: 0;
-    border: none;
-    
+.button:active,
+.button:focus {
+  outline: 0;
+  border: none;
 }
 
 .button:disabled {
-    cursor: not-allowed;
-    background-color: #e7e7e7;
+  cursor: not-allowed;
+  background-color: #e7e7e7;
 }
 
 .button-hoverable span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
 }
 
 .button-hoverable span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
 }
 
 .button-hoverable:hover span {
-    padding-right: 25px;
+  padding-right: 25px;
 }
 
 .button-hoverable:hover span:after {
-    opacity: 1;
-    right: 0;
+  opacity: 1;
+  right: 0;
 }
